Reorganizacion de modulos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "automataenteros.c": "cpp"
+        "automataenteros.c": "cpp",
+        "automataenteros.h": "c"
     }
 }
