--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "automataenteros.c": "cpp",
-        "automataenteros.h": "c"
+        "automataenteros.h": "c",
+        "automataCalculadora.C": "cpp"
     }
 }
